--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <h1>Template</h1>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src='https://dvasquez4155.github.io/Go-Back-to-Portfolio/goBack.js'></script>
+    <!-- <script src="https://kit.fontawesome.com/385ee6e559.js"></script> -->
+    <!-- <script src='https://momentjs.com/downloads/moment.min.js'></script> -->
     <script src='assets/js/script.js'></script>
-    <script src='assets/js/go-back.js'></script>
 </body>
 
 </html>
