--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel='stylesheet' href="assets/css/style.css">
-    <title>Template</title>
-</head>
-
-<body>
-    <h1>Template</h1>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src='https://dvasquez4155.github.io/Go-Back-to-Portfolio/goBack.js'></script>
-    <!-- <script src="https://kit.fontawesome.com/385ee6e559.js"></script> -->
-    <!-- <script src='https://momentjs.com/downloads/moment.min.js'></script> -->
-    <script src='assets/js/script.js'></script>
-</body>
-
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel='stylesheet' href="assets/css/style.css">
+        <title>Template</title>
+    </head>
+    <body>
+        <h1>Template</h1>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script src='https://dvasquez4155.github.io/api/goBack.js'></script>
+        <!-- <script src='https://dvasquez4155.github.io/api/localStorage.js'></script> -->
+        <!-- <script src="https://kit.fontawesome.com/385ee6e559.js"></script> -->
+        <!-- <script src='https://momentjs.com/downloads/moment.min.js'></script> -->
+        <script src='assets/js/script.js'></script>
+    </body>
 </html>
