Added image, changed readme

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src='https://dvasquez4155.github.io/api/goBack.js'></script>
+        <script src='https://dvasquez4155.github.io/api/JSON.js'></script>
+        <!-- <script src='../api/JSON.js'></script> -->
         <!-- <script src='https://dvasquez4155.github.io/api/localStorage.js'></script> -->
         <!-- <script src="https://kit.fontawesome.com/385ee6e559.js"></script> -->
         <!-- <script src='https://momentjs.com/downloads/moment.min.js'></script> -->
